[package]
name = "iasm"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.4"
reqwest = { version = "0.11", features = ["blocking"] }
semver = "0.11"